--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ packaging==24.0
 pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.2.0
+psycopg==3.1.18
+psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
 PyJWT==2.8.0
@@ -27,5 +29,6 @@ PyYAML==6.0.1
 referencing==0.34.0
 rpds-py==0.18.0
 sqlparse==0.4.4
+typing_extensions==4.10.0
 tzdata==2024.1
 uritemplate==4.1.1
