--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       - ./:/app
       - my_media:/files/media
     command: >
-      sh -c "python manage.py wait_for_db
+      sh -c "python manage.py wait_for_db &&
             python manage.py migrate &&
+            python manage.py loaddata theatre_data.json &&
             python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
